<resources>
    <string name="app_name">My Application</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="media_streamer">Spotify Streamer</string>
    <string name="super_duo1">Scores App</string>
    <string name="super_duo2">Library App</string>
    <string name="ant_terminator">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>
</resources>
