<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cs.myapplication.MainActivity"
    android:background="#dfeaf1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_title"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_centerHorizontal="true"
        android:autoText="false"
        android:textSize="26sp"
        android:id="@+id/textView" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/media_streamer"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contextClickable="false"
        android:background="#f08c35"
        android:onClick="sendStreamer" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/super_duo1"
        android:id="@+id/button2"
        android:layout_marginTop="10dp"
        android:contextClickable="false"
        android:background="#f08c35"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:onClick="sendScores" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/super_duo2"
        android:id="@+id/button3"
        android:layout_marginTop="10dp"
        android:contextClickable="false"
        android:background="#f08c35"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:onClick="sendLibrary" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/ant_terminator"
        android:id="@+id/button4"
        android:layout_marginTop="10dp"
        android:contextClickable="false"
        android:background="#f08c35"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:onClick="sendBuildBigger" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/xyz_reader"
        android:id="@+id/button5"
        android:layout_marginTop="10dp"
        android:contextClickable="false"
        android:background="#f08c35"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:onClick="sendXYZ" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:layout_marginTop="10dp"
        android:contextClickable="false"
        android:background="#f03535"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:onClick="sendCapstone" />
</RelativeLayout>
